Adicionado cabeçalho ao código-fonte

--- a/relatorio.tex
+++ b/relatorio.tex
@@ -336,10 +336,11 @@ Não entraremos em detalhes sobre a implementação das mesmas.
 \label{sec:exemplos}
 
 Os exemplos abaixo mostram a saída gerada ao se rodar o script \verb|ep3.m| com o Octave.
-(\verb|$ ocatve -qf ep3.m|). O script apresenta a formulação de 7 problemas no formato 
-(\ref{eq:PL}) que são resolvidos com a função \verb|simplex| implementada em \verb|simplex.m| e
-descrita anteriormente. Os exemplos mostram problemas com uma solução ótima finita (1, 2 e 3),
-problemas inviáveis (4 e 5) e problemas ilimitados com custo $-\infty$ (6 e 7).
+(\verb|$ ocatve -qf ep3.m|). A saída também está disponível no arquivo \verb|out.txt|.
+O script apresenta a formulação de 7 problemas no formato  (\ref{eq:PL}) que são resolvidos com 
+a função \verb|simplex| implementada em \verb|simplex.m| e descrita anteriormente. Os exemplos 
+mostram problemas com uma solução ótima finita (1, 2 e 3), problemas inviáveis (4 e 5) e problemas 
+ilimitados (6 e 7).
 
 \begin{tiny}
 \begin{verbatim}
